<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.srj.marvelworld.ui.characterDetails.CharacterDetailsViewModel" />
        <variable
            name="type"
            type="com.srj.marvelworld.domain.types.MarvelContentType" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/details_background"
        app:layoutDescription="@xml/fragment_character_details_scene">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_top_part"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/details_top_part">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_item"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:scaleType="fitXY"
                tools:src="@drawable/ic_launcher_background"
                app:imageUrl="@{viewModel.characterDetails.toData().imageUrl}"
                android:layout_margin="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/bottom_rounded_image_view" />

            <TextView
                android:id="@+id/text_item_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="Character Name"
                android:text="@{viewModel.characterDetails.toData().name}"
                android:textSize="20sp"
                android:textColor="@color/light_grey"
                android:paddingStart="8dp"
                android:layout_marginHorizontal="@dimen/space_x_small"
                android:layout_marginTop="@dimen/space_x_small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_item" />


            <TextView
                android:id="@+id/text_label_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="16sp"
                android:textColor="#FAE9EA"
                android:paddingStart="4dp"
                android:layout_marginHorizontal="@dimen/space_small"
                android:layout_marginTop="@dimen/space_small"
                app:layout_constraintStart_toStartOf="@id/text_item_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_item_name" />

            <TextView
                android:id="@+id/text_item_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="Character Name Character NameCharacter NameCharacter NameCharacter NameCharacter Name"
                app:description="@{viewModel.characterDetails.toData().description}"
                android:textSize="14sp"
                android:textColor="#E4D4D4"
                android:paddingStart="4dp"
                android:layout_marginHorizontal="@dimen/space_small"
                android:layout_marginVertical="@dimen/space_xx_small"
                app:layout_constraintStart_toStartOf="@id/text_item_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_label_description" />


            <TextView
                android:id="@+id/text_label_modified"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/modified_date"
                android:textSize="16sp"
                android:textColor="#FAE9EA"
                android:paddingStart="4dp"
                android:layout_marginHorizontal="@dimen/space_small"
                android:layout_marginTop="@dimen/space_small"
                app:layout_constraintStart_toStartOf="@id/text_item_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_item_description" />

            <TextView
                android:id="@+id/text_item_modified"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="2022/02/22"
                app:modifiedDate="@{viewModel.characterDetails.toData().modified}"
                android:textSize="14sp"
                android:textColor="#E4D4D4"
                android:paddingStart="4dp"
                android:layout_marginHorizontal="@dimen/space_small"
                android:layout_marginVertical="@dimen/space_xx_small"
                app:layout_constraintStart_toStartOf="@id/text_item_name"
                app:layout_constraintTop_toBottomOf="@id/text_label_modified" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/group_views"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:constraint_referenced_ids="text_label_description, text_item_description, text_label_modified, text_item_modified"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_bottom_part"
            android:layout_width="match_parent"
            android:layout_height="480dp"
            android:background="@drawable/details_bottom_part_shape1"
            android:clipToPadding="false"
            android:paddingEnd="6dp"
            app:layout_constraintTop_toBottomOf="@id/constraint_top_part">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabIndicatorAnimationMode="elastic"
                app:tabGravity="center"
                app:tabIndicatorColor="@color/primary_color"
                app:tabMaxWidth="0dp"
                app:tabMode="fixed"
                app:tabSelectedTextColor="@color/primary_color"
                app:tabTextColor="@color/black"
                app:tabBackground="@color/light_grey"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/details_bottom_part_shape1"
                android:paddingVertical="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tab_item_comics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comics" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tab_item_stories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stories" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tab_item_events"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/events" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tab_item_series"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/series" />

            </com.google.android.material.tabs.TabLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_marvel_character_data"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="2"
                tools:listitem="@layout/item_character"
                android:paddingVertical="@dimen/space_small"
                android:paddingHorizontal="@dimen/space_small"
                android:clipToPadding="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tab_layout_container"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>